refactor(message): add json type handling for the metadata